--- a/object_web/MyMvcApp/Views/Home/Index.cshtml
+++ b/object_web/MyMvcApp/Views/Home/Index.cshtml
@@ -61,10 +61,10 @@
                         <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/signup-form/login_converted.cshtml">Login</a>
+                        <a class="nav-link" href="@Url.Action("Login", "Home")">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/signup-form/signup_converted.cshtml">Sign Up</a>
+                        <a class="nav-link"  href="@Url.Action("Signup", "Home")">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
