--- a/object_web/MyMvcApp/Views/Home/About_converted.cshtml
+++ b/object_web/MyMvcApp/Views/Home/About_converted.cshtml
@@ -50,19 +50,19 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+               <a class="nav-link" href="@Url.Action("Login", "Home")">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link"  href="@Url.Action("Signup", "Home")">Sign Up</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
             </li>
         </ul>
     </div>
