--- a/JS_projects/pokemon/style.css
+++ b/JS_projects/pokemon/style.css
@@ -1,10 +1,10 @@
 body {
     font-family: Arial, sans-serif;
+    height: 100vh;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
     background-color: #f0f0f0;
   }
   
@@ -13,26 +13,30 @@ body {
     flex-direction: column;
     align-items: center;
     background: white;
-    padding: 20px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   input[type="number"] {
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 15px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 200px;
+    width: 250px;
+    font-size: 18px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   button {
-    padding: 10px 20px;
+    padding: 15px 30px;
     background-color: #007BFF;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 18px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   button:hover {
