--- a/web transfer/style/style/style.css
+++ b/web transfer/style/style/style.css
@@ -1134,7 +1134,7 @@ h2.title::first-letter {
 }
 
 .footer {
-  background: purple;
+  background: blue;
   padding: 100px 0px 80px 0px;
   position: relative;
   z-index: 20;
